--- a/SSIT-Instructor/css/ins_dashboard.css
+++ b/SSIT-Instructor/css/ins_dashboard.css
@@ -429,7 +429,12 @@ progress{height:30%;width:50%;}#pbar_dots{width:50%;display: flex;justify-conten
 }
 #rheading{
     margin: 0 0 0 5%;
-
+}
+#rbtop{
+    justify-content: space-between;
+}
+#rbtop a button{
+    margin: 0 0 0 -50%;
 }
 #rbbottom,#rbottom{
     height:86%;
@@ -823,4 +828,17 @@ a:hover li,.navhighlighter{
     table{
         width:90vw;
     }
+}
+#course_added{
+    height: 100%;
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: cursive;
+}
+.danger{
+    color:red;
+    font-size: 1.5em;
 }
