resources_done_3aug22_12:00 commit

--- a/SSIT-Instructor/css/ins_dashboard.css
+++ b/SSIT-Instructor/css/ins_dashboard.css
@@ -491,7 +491,7 @@ td{
 #rbottom input,#rbottom button{
     font-size: 1.3vw;
 }
-#rbottom button{
+#rbottom input[type="submit"]{
     align-self: center;
     margin: 0 0 0 auto;
     height:80%;
