aug3_11.36pm commit_done dashboard

--- a/SSIT-Instructor/css/ins_dashboard.css
+++ b/SSIT-Instructor/css/ins_dashboard.css
@@ -463,6 +463,9 @@ table{
 th{
     border-radius: 10px 0px 10px 0px;
 }
+.filelinks:hover{
+    color:red !important;
+}
 td{
     height: 30px;
     text-align: center;
