--- a/SSIT-Instructor/css/ins_dashboard.css
+++ b/SSIT-Instructor/css/ins_dashboard.css
@@ -232,17 +232,26 @@ main{
     margin: 0% 0.5% 0% 2%;
     /*  */
     height:250px;
-    width:290px;
+    width:260px;
     border-radius: 10px;
     box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.226);
+    cursor: pointer;
+}
+#card:hover{
+    transform:scale(1.02);
 }
 #card_top{
     height:60%;
     width:100%;
-    background:url("../warehouse/Rectangle\ 9.png");
-    background-position: center;
-    background-size: 80%;
-    background-repeat: no-repeat;
+    /* background:url("../warehouse/Rectangle\ 9.png"); */
+    /* background-size: cover;background-position: center;background-repeat: no-repeat; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:rgba(128, 128, 128, 0.267);
+}
+#card_top img:hover{
+    transform:translateY(2px);
 }
 #card_bottom{
     height:40%;
